--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 
 body {
     font-size: 16px;
-    background-color: black;
+    background-color: #090909;
     font-family: arial;
     height: 100vh;
     width: 100vw;
@@ -36,9 +36,12 @@ body {
 .visualizer {
     height: 100%;
     width: 75%;
-    background-color: black;
+    background-color: #090909;
     border: 2px solid gray;
     border-bottom: none;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
 }
 
 .album-nav {
@@ -183,6 +186,14 @@ body {
     justify-content: space-between;
 }
 
+.artist-playing {
+    color: #737373;
+}
+
+.album-playing {
+    font-weight: bold;
+}
+
 .now-playing {
     z-index: 100;
 }
@@ -235,4 +246,66 @@ body {
     border: 2px solid #737373;
     border-radius: 1em;
     background-color: #4a4a4a;
+}
+
+
+@media only screen and (max-width: 480px) {
+
+    body {
+        margin: 0;
+        padding: 0;
+    }
+
+    .top-wrapper {
+        height: 70%;
+        flex-direction: column;
+        border: none;
+    }
+
+    .visualizer {
+        width: 100%;
+        height: 40%;
+        border: 4px solid #131313;
+    }
+
+    .right-wrapper {
+        width: 100%;
+        height: 60%;
+        border: none;
+        font-size: .75em;
+    }
+
+    .album-nav {
+        position: fixed;
+        width: 100%;
+    }
+
+    .tracks-pane {
+        margin-top: 4em;
+    }
+
+    .bottom-wrapper {
+        height: 30%;
+    }
+
+    .playing-text {
+        font-size: .9em;
+        border-bottom-left-radius: 1.5rem;
+    }
+
+    .controls {
+        flex-direction: column;
+    }
+
+    .duration {
+        font-size: .8em;
+    }
+
+    .button-wrap {
+        margin-bottom: 1rem;
+    }
+
+    .controls button {
+        font-size:  1em;
+    }
 }
