--- a/styles.css
+++ b/styles.css
@@ -291,14 +291,27 @@ body {
     .playing-text {
         font-size: .9em;
         border-bottom-left-radius: 1.5rem;
+        display: flex;
+    }
+
+    .now-playing {
+        width: 80%;
+        height: 1.2em;
+        overflow-x: hidden;
+        white-space: nowrap;
+    }
+
+    .album-playing {
+        visibility: hidden;
+    }
+
+    .duration {
+        width: 20%;
+        font-size: .8em;
     }
 
     .controls {
         flex-direction: column;
-    }
-
-    .duration {
-        font-size: .8em;
     }
 
     .button-wrap {
