--- a/public/styles.css
+++ b/public/styles.css
@@ -31,8 +31,12 @@ body {
     background-color: #000000;
     border-top: 1px solid gray;
     border-right: 1px solid gray;
-    overflow: scroll;
     cursor: default;
+}
+
+.tracks-pane {
+    overflow: scroll;
+    height: 90%;
 }
 
 .visualizer {
@@ -47,7 +51,7 @@ body {
 }
 
 .album-nav {
-    height: 2rem;
+    height: 10%;
     background-color: #090909;
     color: #e6e6e6;
     font-size: .9em;
@@ -260,7 +264,16 @@ body {
         margin: 0;
         padding: 0;
         min-height: 100vh;
-        min-height: -webkit-fill-available
+        min-height: -webkit-fill-available;
+        display: flex;
+        align-items: center;
+        background-color: #4a4a4a;
+
+    }
+
+    .container {
+        height: 90vh;
+        margin: auto;
     }
 
     .top-wrapper {
@@ -280,16 +293,26 @@ body {
         height: 60%;
         border: none;
         font-size: 1em;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
     }
 
     .album-nav {
-        position: fixed;
+        position: absolute;
         width: 100%;
+        height: 5%;
     }
 
     .tracks-pane {
-        margin-top: 2em;
+        height: 95%;
+        margin-top: 2rem;
     }
+
+    .album-card {
+        margin: .5rem;
+    }
+
 
     .bottom-wrapper {
         height: 30%;
